bugfix: registered routes for inscriptions and swagger update
