# docs/swagger-output.json
@@ -9,7 +9,7 @@
     "basePath": "/",
     "schemes": ["http"],
     "paths": {
-        "/role": {
+        "/roles": {
             "get": {
                 "description": "",
                 "responses": {
@@ -27,7 +27,7 @@
                 }
             }
         },
-        "/role/{id}": {
+        "/roles/{id}": {
             "get": {
                 "description": "",
                 "parameters": [
@@ -299,21 +299,21 @@
         "Developer": {
             "type": "object",
             "properties": {
-                "id": "number",
-                "fullname": "string",
-                "email": "string",
-                "github_link": "string",
-                "linkedin_link": "string",
-                "idrole": "number",
-                "ceremony_available": "number",
-                "discord_username": "string",
-                "idseniority": "number",
-                "looking_for_work": "number",
-                "retire_probability": "number",
-                "condition_accepted": "number",
-                "idteam": "number",
-                "status": "number",
-                "created_by": "string"
+                "id": { "type": "integer" },
+                "fullname": { "type": "string" },
+                "email": { "type": "string" },
+                "github_link": { "type": "string" },
+                "linkedin_link": { "type": "string" },
+                "idrole": { "type": "integer" },
+                "ceremony_available": { "type": "integer" },
+                "discord_username": { "type": "string" },
+                "idseniority": { "type": "integer" },
+                "looking_for_work": { "type": "integer" },
+                "retire_probability": { "type": "integer" },
+                "condition_accepted": { "type": "integer" },
+                "idteam": { "type": "integer" },
+                "status": { "type": "integer" },
+                "created_by": { "type": "string" }
             }
         }
     }
