# src/routes/index.ts
@@ -3,6 +3,8 @@ import { router as RoleRoutes } from "./role";
 import { router as DocsRoutes } from "./api-docs";
 import { router as SeniorityRoutes } from "./seniority";
 import { router as TeamRoutes } from "./team";
+import { router as DeveloperInscriptionRoutes } from "./developer";
 
 export const router = express.Router();
-router.use(RoleRoutes, DocsRoutes, SeniorityRoutes, TeamRoutes);
+router.use("/roles", RoleRoutes);
+router.use(DocsRoutes, SeniorityRoutes, TeamRoutes, DeveloperInscriptionRoutes);
